--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Welcome to Rubin Yao Homepage!
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Welcome to My Homepage</title>
+</head>
+<body>
+    <h1>Hello, welcome to my GitHub Pages site!</h1>
+    <p>This is my personal homepage.</p>
+</body>
+</html>
