--- a/index.html
+++ b/index.html
@@ -143,7 +143,6 @@ let publications =[
   {title:"Fan Yang*, Chungui Li, Yong Peng, Jingxian Liu, <b>Yabing Yao</b>, Jiayan Wen, Shuhong Yang. <a target='_blank' href='https://doi.org/10.1016/j.physa.2018.09.114'><i>Locating the propagation source in complex networks with observers-based similarity measures and direction-induced search</i></a>. Soft Computing, 2023, 27:16059–16085 (WOS:000988890500016).",PDF:"papers/2023-Soft_Computing-Locating_the_propagation_source_in_complex_networks_with_observers_based_similarity_measures_and_direction_induced_search.pdf"},
   {title:"Fuzhong Nian*, Yinuo Qian, and <b>Yabing Yao</b>. <a target='_blank' href='https://doi.org/10.1089/big.2021.0398'><i>Identification of Potential Cooperation Relationships Among Scientists</i></a>. Big Data, 2023, 11(2)::87-104 (WOS:000856165500001).",PDF:"papers/2023-Big_data-Identification_of_Potential_Cooperation_Relationships_Among_Scientists.pdf"},
   {title:"Tongfeng Li, Ruisheng Zhang*, Bojuan Niu, <b>Yabing Yao</b>, Jun Ma, Jing Jiang, Zhili Zhao. <a target='_blank' href='https://doi.org/10.1093/comjnl/bxac157'><i>Link Prediction Based On Local Structure And Node Information long Local Paths</i></a>. Computer Journal, 2022,12 (WOS:000891546500001).",PDF:"papers/2022-Computer_Journal-Link_Prediction_Based_On_Local_Structure_And_Node_Information_Along_Local_Paths.pdf"},
-  {title:"Xuelong Yu, Fuzhong Nian*, <b>Yabing Yao</b> and Li Luo. <a target='_blank' href='https://doi.org/10.1109/TCSS.2021.3073899'><i>Phase Transition in Group Emotion</i></a>. IEEE Transactions on Computational Social Systems, 2021,8(5):1143-1152 (WOS:000702557700011).", PDF:""},
   {title:"Fan Yang, Shuhong Yang*, Yong Peng, <b>Yabing Yao</b>, Zhiwen Wang, Houjun Li, Jingxian Liu, Ruisheng Zhang, Chungui Li*. <a target='_blank' href='https://doi.org/10.1016/j.knosys.2020.105674'><i>Locating the propagation source in complex networks with a direction-induced search based Gaussian estimator</i></a>. Knowledge-Based Systems, 2020, 195(2) :105674 (WOS:000523561500004).",PDF:"papers/2020-KBS-Locating_the_propagation_source_in_complex_networks_with_a_direction-induced_search_based_Gaussian_estimator.pdf"},
   {title:"<b>Yabing Yao</b>, Ruisheng Zhang*, Fan Yang, Jianxin Tang, Yongna Yuan, Rongjing Hu.<a target='_blank' href='https://doi.org/10.1016/j.physa.2018.06.051'><i>Link prediction in complex networks based on the interactions among paths</i></a>. Physica A: Statistical Mechanics and Its Applications, 2018, 510: 52~67 (WOS:000442712000005).",PDF:"papers/2018-Physica_A-Link_prediction_in_complex_networks_based_on_the_interactions_among_paths.pdf"},
   {title:"<b>Yabing Yao</b>,  Ruisheng Zhang*, Fan Yang, Yongna Yuan, Rongjing Hu, Zhili Zhao. <a target='_blank' href='https://doi.org/10.1142/S012918311750053X'><i>Link prediction based on local weighted paths for complex networks</i></a>. International Journal of Modern Physics C, 2017, 28(04): 1750053 (WOS:000400271700011).",PDF:"papers/2017-IJMPC-Link_prediction_based_on_local_weighted_paths_for_complex_networks.pdf"},
@@ -188,6 +187,11 @@ let awards = [
 let defaultPhotoUrl = "default.png"
 
 let students = [
+  {name:"王英仁",type:"硕",sex:"男",grade:"2024",to:"在读",birthYearMonth:"1999.01",fromCity:"河南省",photoUrl:""},
+  {name:"陈俊",type:"硕",sex:"男",grade:"2024",to:"在读",birthYearMonth:"1999.01",fromCity:"湖南省",photoUrl:""},
+  {name:"曹珍珍",type:"硕",sex:"女",grade:"2024",to:"在读",birthYearMonth:"1999.01",fromCity:"河南省",photoUrl:""},
+  {name:"陈英伟",type:"硕",sex:"女",grade:"2024",to:"在读",birthYearMonth:"1999.01",fromCity:"山东省",photoUrl:""},
+  {name:"樊筱轩",type:"硕",sex:"女",grade:"2024",to:"在读",birthYearMonth:"1999.01",fromCity:"甘肃省天水市",photoUrl:""},
   {name:"叶荣",type:"硕",sex:"男",grade:"2023",to:"在读",birthYearMonth:"1999.01",fromCity:"甘肃省平凉市",photoUrl:"photos/23_yerong.jpg"},
   {name:"刘阳",type:"硕",sex:"女",grade:"2023",to:"在读",birthYearMonth:"1999.08",fromCity:"河南省洛阳市",photoUrl:"photos/23_liuyang.jpg"},
   {name:"周巍",type:"硕",sex:"女",grade:"2023",to:"在读",birthYearMonth:"1999.04.27",fromCity:"山东省莱阳市",photoUrl:"photos/23_zhouwei.jpg"},
@@ -196,8 +200,8 @@ let students = [
   {name:"毛志恒",type:"硕",sex:"男",grade:"2022",to:"在读",birthYearMonth:"1998.XX",fromCity:"甘肃省金昌市",photoUrl:"photos/22_maozhiheng.jpg"},
   {name:"郭平霞",type:"硕",sex:"女",grade:"2022",to:"在读",birthYearMonth:"1998.XX",fromCity:"甘肃省陇南市",photoUrl:"photos/22_guopingxia.jpg"},
   {name:"遆姿玉",type:"硕",sex:"女",grade:"2022",to:"在读",birthYearMonth:"1997.XX",fromCity:"甘肃省武威市",photoUrl:"photos/22_tiziyu.jpg"},
-  {name:"何洋洋",type:"硕",sex:"男",grade:"2021",to:"在读",birthYearMonth:"1997.03",fromCity:"安徽省池州市",photoUrl:"photos/21_heyangyang.png"},
-  {name:"徐志鹏",type:"硕",sex:"男",grade:"2021",to:"在读",birthYearMonth:"1998.11",fromCity:"甘肃省临夏市",photoUrl:"photos/21_xuzhipeng.jpg"},
+  {name:"何洋洋",type:"硕",sex:"男",grade:"2021",to:"北京交通大学(攻博)",birthYearMonth:"1997.03",fromCity:"安徽省池州市",photoUrl:"photos/21_heyangyang.png"},
+  {name:"徐志鹏",type:"硕",sex:"男",grade:"2021",to:"甘肃省选调生",birthYearMonth:"1998.11",fromCity:"甘肃省临夏市",photoUrl:"photos/21_xuzhipeng.jpg"},
   {name:"刘泽光",type:"硕",sex:"男",grade:"2020",to:"青海开放大学",birthYearMonth:"1998.06",fromCity:"甘肃省武威市",photoUrl:"photos/20_liuzeguang.png"},
   {name:"程天宇",type:"硕",sex:"男",grade:"2020",to:"西北工业大学(攻博)",birthYearMonth:"1997.02",fromCity:"山西省永济市",photoUrl:"photos/20_chengtianyu.png"},
   {name:"黄振天",type:"本",sex:"男",grade:"2019",to:"清华大学计算机系(直博)",birthYearMonth:"2001.02",fromCity:"山东省菏泽市",photoUrl:"photos/19_huangzhentian.png"},
