--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ const app = {
 }
 let publications =[
   {title:"<b>Yabing Yao*</b>, Yangyang He, Zhentian Huang, Zhipeng Xu, Fan Yang, Jianxin Tang, Kai Gao. <a target='_blank' href='https://doi.org/10.1007/s10489-023-05211-1'><i>Deep non-negative matrix factorization with edge generator for link prediction in complex networks</i></a>. Applied Intelligence, 2024:54(1):592-613, (WOS:001126014000001).",code:"https://github.com/yabingyao/EGDNMF4LinkPrediction",PDF:"papers/2023-Applied_Intelligence-Deep_non_negative_matrix_factorization_with_edge_generator_for_link_prediction_in_complex_networks.pdf"},
-  {title:"<b>Yabing Yao*</b>, Tianyu Cheng, Xiaoqiang Li, Yangyang He, Fan Yang, Tongfeng Li, Zeguang Liu, Zhipeng Xu. <a target='_blank' href='https://doi.org/10.1007/s10489-023-05211-1'><i>Link prediction based on the mutual information with high-order clustering structure of nodes in complex networks</i></a>. Physica A: Statistical Mechanics and its Applications, 2023, 610:128428 (WOS:000976274200001).",code:"https://github.com/yabingyao/EGDNMF4LinkPrediction",PDF:"papers/2023-Physica_A-Link_prediction_based_on_the_mutual_information_with_high-order_clustering_structure_of_nodes_in_complex_networks.pdf"},
+  {title:"<b>Yabing Yao*</b>, Tianyu Cheng, Xiaoqiang Li, Yangyang He, Fan Yang, Tongfeng Li, Zeguang Liu, Zhipeng Xu. <a target='_blank' href='https://doi.org/10.1016/j.physa.2022.128428'><i>Link prediction based on the mutual information with high-order clustering structure of nodes in complex networks</i></a>. Physica A: Statistical Mechanics and its Applications, 2023, 610:128428 (WOS:000976274200001).",code:"https://github.com/yabingyao/EGDNMF4LinkPrediction",PDF:"papers/2023-Physica_A-Link_prediction_based_on_the_mutual_information_with_high-order_clustering_structure_of_nodes_in_complex_networks.pdf"},
   {title:"Fan Yang, Jingxian Liu, Ruisheng Zhang, <b>Yabing Yao*</b>. <a target='_blank' href='https://doi.org/10.1371/journal.pone.0285563'><i>Diffusion characteristics classification framework for identification of diffusion source in complex networks</i></a>. PLOS ONE, 2023,18(5):e0285563 (WOS:000988890500016).",PDF:"papers/2023-Plos_one-Diffusion_characteristics_classification_framework_for_identification_of_diffusion_source_in_complex_networks.pdf"},
   {title:"Fan Yang*, Chungui Li, Yong Peng, Jingxian Liu, <b>Yabing Yao</b>, Jiayan Wen, Shuhong Yang. <a target='_blank' href='https://doi.org/10.1016/j.physa.2018.09.114'><i>Locating the propagation source in complex networks with observers-based similarity measures and direction-induced search</i></a>. Soft Computing, 2023, 27:16059–16085 (WOS:000988890500016).",PDF:"papers/2023-Soft_Computing-Locating_the_propagation_source_in_complex_networks_with_observers_based_similarity_measures_and_direction_induced_search.pdf"},
   {title:"Fuzhong Nian*, Yinuo Qian, and <b>Yabing Yao</b>. <a target='_blank' href='https://doi.org/10.1089/big.2021.0398'><i>Identification of Potential Cooperation Relationships Among Scientists</i></a>. Big Data, 2023, 11(2)::87-104 (WOS:000856165500001).",PDF:"papers/2023-Big_data-Identification_of_Potential_Cooperation_Relationships_Among_Scientists.pdf"},
@@ -151,7 +151,7 @@ let publications =[
 
 let courses = [
   {title:"C++高级程序设计语言", grade:"软件工程专业， 大学一年级， 秋季学期， 32学时（24理论+8上机）",url:"https://mooc1.chaoxing.com/course/221386459.html"},
-  {title:"Oracle大型数据库技术",grade:"软件工程专业， 大学三年级， 春季学期，40学时（32理论+16上机）",url:"https://mooc1.chaoxing.com/course/208934364.html"}
+  {title:"Oracle大型数据库技术",grade:"软件工程专业， 大学三年级， 春季学期，40学时（24理论+16上机）",url:"https://mooc1.chaoxing.com/course/208934364.html"}
 ]
 
 let projects = [
@@ -174,6 +174,8 @@ let projects = [
 ]
 
 let awards = [
+  {title:"2024 ACM-ICPC国际大学生程序设计竞赛丝绸之路中国邀请赛 金奖(3枚)指导教师",students:"沈宇昊、牛立晖、叶刘强；颜成华、俞成林、卢哲云；王天旭、王福银、王源；"},
+  {title:"2024 ACM-ICPC国际大学生程序设计竞赛全国邀请赛（陕西） 铜奖(1枚)指导教师",students:"沈宇昊、牛立晖、叶刘强"},
   {title:"2023 ACM-ICPC国际大学生程序设计竞赛丝绸之路中国邀请赛 银奖(4枚)指导教师",students:"沈宇昊、易宇杰、叶刘强；牛立晖、俞成林、卢哲云；颜成华、严子豪、王福银；周妤蔓、任家兴、赖新鹏；"},
   {title:"2022 兰州理工大学2021-2022学年优秀班主任",students:""},
   {title:"2021 第十二届蓝桥杯省赛 省级一等奖指导教师",students:"黄振天"},
@@ -187,20 +189,20 @@ let awards = [
 let defaultPhotoUrl = "default.png"
 
 let students = [
-  {name:"王英仁",type:"硕",sex:"男",grade:"2024",to:"在读",birthYearMonth:"1999.01",fromCity:"河南省",photoUrl:"default_boy.jpg"},
-  {name:"陈俊",type:"硕",sex:"男",grade:"2024",to:"在读",birthYearMonth:"1999.01",fromCity:"湖南省",photoUrl:"default_boy.jpg"},
-  {name:"曹珍珍",type:"硕",sex:"女",grade:"2024",to:"在读",birthYearMonth:"1999.01",fromCity:"河南省",photoUrl:"default_girl.jpg"},
-  {name:"陈英伟",type:"硕",sex:"女",grade:"2024",to:"在读",birthYearMonth:"1999.01",fromCity:"山东省",photoUrl:"default_girl.jpg"},
-  {name:"樊筱轩",type:"硕",sex:"女",grade:"2024",to:"在读",birthYearMonth:"1999.01",fromCity:"甘肃省天水市",photoUrl:"default_girl.jpg"},
+  {name:"王英仁",type:"硕",sex:"男",grade:"2024",to:"在读",birthYearMonth:"2001.12",fromCity:"河南省开封市",photoUrl:"default_boy.jpg"},
+  {name:"陈俊",type:"硕",sex:"男",grade:"2024",to:"在读",birthYearMonth:"2000.06",fromCity:"湖南省岳阳市",photoUrl:"default_boy.jpg"},
+  {name:"曹珍珍",type:"硕",sex:"女",grade:"2024",to:"在读",birthYearMonth:"2002.01",fromCity:"河南省周口市",photoUrl:"24_caozhenzhen.jpg"},
+  {name:"陈英伟",type:"硕",sex:"女",grade:"2024",to:"在读",birthYearMonth:"2000.10",fromCity:"山东省聊城市",photoUrl:"24_chenyingwei.jpg"},
+  {name:"樊筱轩",type:"硕",sex:"女",grade:"2024",to:"在读",birthYearMonth:"2002.03",fromCity:"甘肃省天水市",photoUrl:"default_girl.jpg"},
   {name:"叶荣",type:"硕",sex:"男",grade:"2023",to:"在读",birthYearMonth:"1999.01",fromCity:"甘肃省平凉市",photoUrl:"23_yerong.jpg"},
   {name:"刘阳",type:"硕",sex:"女",grade:"2023",to:"在读",birthYearMonth:"1999.08",fromCity:"河南省洛阳市",photoUrl:"23_liuyang.jpg"},
-  {name:"周巍",type:"硕",sex:"女",grade:"2023",to:"在读",birthYearMonth:"1999.04.27",fromCity:"山东省莱阳市",photoUrl:"23_zhouwei.jpg"},
-  {name:"程跃",type:"硕",sex:"男",grade:"2023",to:"在读",birthYearMonth:"1999.01.27",fromCity:"四川省巴中市",photoUrl:"23_chengyue.jpg"},
+  {name:"周巍",type:"硕",sex:"女",grade:"2023",to:"在读",birthYearMonth:"1999.04",fromCity:"山东省莱阳市",photoUrl:"23_zhouwei.jpg"},
+  {name:"程跃",type:"硕",sex:"男",grade:"2023",to:"在读",birthYearMonth:"1999.01",fromCity:"四川省巴中市",photoUrl:"23_chengyue.jpg"},
   {name:"周新宇",type:"硕",sex:"男",grade:"2023",to:"在读",birthYearMonth:"2000.05",fromCity:"山东省东营市",photoUrl:"23_zhoutianyu.jpg"},
-  {name:"毛志恒",type:"硕",sex:"男",grade:"2022",to:"在读",birthYearMonth:"1998.XX",fromCity:"甘肃省金昌市",photoUrl:"22_maozhiheng.jpg"},
-  {name:"郭平霞",type:"硕",sex:"女",grade:"2022",to:"在读",birthYearMonth:"1998.XX",fromCity:"甘肃省陇南市",photoUrl:"22_guopingxia.jpg"},
+  {name:"毛志恒",type:"硕",sex:"男",grade:"2022",to:"在读",birthYearMonth:"1999.03",fromCity:"甘肃省金昌市",photoUrl:"22_maozhiheng.jpg"},
+  {name:"郭平霞",type:"硕",sex:"女",grade:"2022",to:"在读",birthYearMonth:"1999.09",fromCity:"甘肃省陇南市",photoUrl:"22_guopingxia.jpg"},
   {name:"遆姿玉",type:"硕",sex:"女",grade:"2022",to:"在读",birthYearMonth:"1997.XX",fromCity:"甘肃省武威市",photoUrl:"22_tiziyu.jpg"},
-  {name:"何洋洋",type:"硕",sex:"男",grade:"2021",to:"北京交通大学(攻博)",birthYearMonth:"1997.03",fromCity:"安徽省池州市",photoUrl:"21_heyangyang.png"},
+  {name:"何洋洋",type:"硕",sex:"男",grade:"2021",to:"北京交通大学(攻博)",birthYearMonth:"1997.03",fromCity:"安徽省池州市",photoUrl:"21_heyangyang.jpg"},
   {name:"徐志鹏",type:"硕",sex:"男",grade:"2021",to:"甘肃省选调生",birthYearMonth:"1998.11",fromCity:"甘肃省临夏市",photoUrl:"21_xuzhipeng.jpg"},
   {name:"刘泽光",type:"硕",sex:"男",grade:"2020",to:"青海开放大学",birthYearMonth:"1998.06",fromCity:"甘肃省武威市",photoUrl:"20_liuzeguang.png"},
   {name:"程天宇",type:"硕",sex:"男",grade:"2020",to:"西北工业大学(攻博)",birthYearMonth:"1997.02",fromCity:"山西省永济市",photoUrl:"20_chengtianyu.png"},
