--- a/index.html
+++ b/index.html
@@ -189,11 +189,11 @@ let awards = [
 let defaultPhotoUrl = "default.png"
 
 let students = [
-  {name:"王英仁",type:"硕",sex:"男",grade:"2024",to:"在读",birthYearMonth:"2001.12",fromCity:"河南省开封市",photoUrl:"default_boy.jpg"},
-  {name:"陈俊",type:"硕",sex:"男",grade:"2024",to:"在读",birthYearMonth:"2000.06",fromCity:"湖南省岳阳市",photoUrl:"default_boy.jpg"},
+  {name:"王英仁",type:"硕",sex:"男",grade:"2024",to:"在读",birthYearMonth:"2001.12",fromCity:"河南省开封市",photoUrl:"24_wangyingren.jpg"},
   {name:"曹珍珍",type:"硕",sex:"女",grade:"2024",to:"在读",birthYearMonth:"2002.01",fromCity:"河南省周口市",photoUrl:"24_caozhenzhen.jpg"},
+  {name:"陈俊",type:"硕",sex:"男",grade:"2024",to:"在读",birthYearMonth:"2000.06",fromCity:"湖南省岳阳市",photoUrl:"24_chenjun.jpg"},
   {name:"陈英伟",type:"硕",sex:"女",grade:"2024",to:"在读",birthYearMonth:"2000.10",fromCity:"山东省聊城市",photoUrl:"24_chenyingwei.jpg"},
-  {name:"樊筱轩",type:"硕",sex:"女",grade:"2024",to:"在读",birthYearMonth:"2002.03",fromCity:"甘肃省天水市",photoUrl:"default_girl.jpg"},
+  {name:"樊筱轩",type:"硕",sex:"女",grade:"2024",to:"在读",birthYearMonth:"2002.03",fromCity:"甘肃省天水市",photoUrl:"24_fanxiaoxuan.jpg"},
   {name:"叶荣",type:"硕",sex:"男",grade:"2023",to:"在读",birthYearMonth:"1999.01",fromCity:"甘肃省平凉市",photoUrl:"23_yerong.jpg"},
   {name:"刘阳",type:"硕",sex:"女",grade:"2023",to:"在读",birthYearMonth:"1999.08",fromCity:"河南省洛阳市",photoUrl:"23_liuyang.jpg"},
   {name:"周巍",type:"硕",sex:"女",grade:"2023",to:"在读",birthYearMonth:"1999.04",fromCity:"山东省莱阳市",photoUrl:"23_zhouwei.jpg"},
