--- a/index.html
+++ b/index.html
@@ -109,8 +109,7 @@
 
 </div>
 
-<a href="https://clustrmaps.com/site/1bsg9" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=4-rELz7JjSkxNSu1VUdtqFwMmp3CEyQx5ifHdCjRx-M&cl=ffffff"></a>
-
+<a href="https://clustrmaps.com/site/1c2p2" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=Y_Awb0XlaS_nupkWi1kNfy2Qh7W8qwfXsc4WWxSJHBo&cl=ffffff"></a>
 </body>
 
 <script>
